--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Play Snake Arena - a modern twist on the classic snake game. Control your snake, eat food, grow longer, and avoid collisions in this fun multiplayer experience.">
     <meta name="keywords" content="snake game, multiplayer snake, arena game, browser game, HTML5 game, canvas game">
     <meta name="author" content="Snake Arena Team">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1155904007929319"
+     crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
